--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ form {
 
 .form-group {
   margin-bottom: 15px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -63,10 +64,11 @@ form {
   margin: 0 auto; 
 }
 
-.form-group input[type="submit"] {
+.custom-button {
   background-color: darkorchid;
+  font-size: large;
   width: 100%; 
-  padding: 10px;
+  padding: 15px;
   color: #fff;
   border: none;
   cursor: pointer;
